<resources>
    <string name="app_name">DroidX-MAD</string>
    <string name="signtitle">signtitle</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="signbtn">signbtn</string>
    <string name="logintitle">logintitle</string>
    <string name="loginbtn">loginbtn</string>
    <string name="noaccount">noaccount</string>
    <string name="userhometitle">userhometitle</string>
    <string name="svcbtn">svcbtn</string>
    <string name="custbtn">custbtn</string>
    <string name="svcprovider">svcprovider</string>
    <string name="haveaccount">haveaccount</string>
    <string name="custitle">custitle</string>
    <string name="emailtitle">email</string>
    <string name="address">address</string>
    <string name="phonetitle">phonetitle</string>
    <string name="lname">lname</string>
    <string name="fnametitle">fnametitle</string>
    <string name="addtitle">addtitle</string>
    <string name="phone">phone</string>
    <string name="chekBox">checkBox</string>
    <string name="updatebtn">submitbtn</string>
    <string name="fname" />
    <string name="emailadd" />
    <string name="lnametitle">Last Name</string>
    <string name="custcontac" />
    <string name="Address" />
    <string name="Lname" />
    <string name="addnotibtn" />
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_here">LOGIN HERE</string>
    <string name="login">LOGIN</string>
    <string name="customer">CUSTOMER</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="notititle">Title</string>
</resources>