<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:hint="@string/logintitle"
        android:text="@string/login_here"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/input_rounded"
        android:hint="@string/username"
        android:padding="28dp"
        android:textColor="#70777C"
        android:textColorHint="#70777C"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/input_rounded"
        android:hint="@string/password"
        android:padding="28dp"
        android:textColor="#70777C"
        android:textColorHint="#70777C"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="#7F4BDD"
        android:hint="@string/loginbtn"
        android:onClick="Onsend"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/noaccount"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/loginbtn"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="180dp"
        android:hint="@string/noaccount"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>