<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/signtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/signtitle"
        android:text="SIGN UP"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <EditText
        android:id="@+id/username"
        android:layout_width="238dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/input_rounded"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:text="Username"
        android:textColor="#70777C"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signtitle" />

    <EditText
        android:id="@+id/email"
        android:layout_width="238dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/input_rounded"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:text="Email"
        android:textColor="#70777C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="238dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_rounded"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:text="Password"
        android:textColor="#70777C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/signbtn"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:backgroundTint="#673AB7"
        android:background="@drawable/button_rounded"
        android:hint="@string/signbtn"
        android:onClick="@string/signbtn"
        android:text="SIGN UP"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.146"

        />

    <TextView
        android:id="@+id/createText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/haveaccount"
        android:text="Already Registered ? Login Here"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signbtn" />

    <ImageButton
        android:id="@+id/imgbtnsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_send"
        android:onClick="Onsend"
        tools:ignore="OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>